--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,9 @@
 			<version>3.0.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.kafka</groupId>
-			<artifactId>spring-kafka</artifactId>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>3.3.0</version>
 		</dependency>
 	</dependencies>
 
