--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.data.mongodb.repositories.enabled=true
 
 
 
-spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id=test-id
+spring.kafka.bootstrap-servers=10.177.68.98:9092
+spring.kafka.consumer.group-id=session-data
