--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8082
+spring.application.name=friendService
 spring.data.mongodb.database=quinbook
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
@@ -6,5 +7,5 @@ spring.data.mongodb.repositories.enabled=true
 
 
 
-spring.kafka.bootstrap-servers=10.177.68.98:9092
+spring.kafka.bootstrap-servers=10.177.68.122:9092
 spring.kafka.consumer.group-id=session-data
